<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white_dull">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="#88000000"
            android:contentDescription="@string/image"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/title_prefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment_prefix"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:textColor="@android:color/secondary_text_light"
                android:lines="1"
                android:ellipsize="end"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"/>

    <LinearLayout
        android:id="@+id/edit_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/comment_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/comment_hint"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="4"/>

        <ImageView
            android:id="@+id/ic_comment"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="16dp"
            android:src="@drawable/ic_comment_black_48dp"
            android:background="@drawable/btn_ripple_bg"
            android:alpha="0.5"
            android:clickable="true"
            android:contentDescription="@string/icon"/>

    </LinearLayout>


</LinearLayout>