<resources>

    <string name="app_name">FlickrClient</string>

    <!-- activity transition keyword -->
    <string name="trans_list2detail">list2detail</string>

    <!-- activity labels -->
    <string name="detail">Detail</string>
    <string name="user">User</string>


    <!-- menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_my_page">MyPage</string>
    <string name="action_download">Download</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>


    <!-- content descriptions -->
    <string name="image">Image</string>
    <string name="icon">Icon</string>

    <!-- ImageUtils -->
    <string name="save_success">Image saved</string>
    <string name="save_failed">Failed to save</string>
    <string name="share_failed">Failed to share</string>
    <string name="share_intent_title">Choose app to share</string>

    <!-- action response -->
    <string name="loading">Loading…</string>
    <string name="sending">Sending…</string>
    <string name="posted">Posted</string>
    <string name="network_problem_message">Network Error Occurred</string>

    <!-- others -->
    <string name="no_data">No image found…</string>
    <string name="detail_container">detail_container</string>
    <string name="tab_title_1">POST</string>
    <string name="tab_title_2">FAVORITE</string>
    <string name="tab_title_3">ABOUT</string>
    <string name="flickr">Flickr</string>
    <string name="comment_prefix">comment to</string>
    <string name="comment_hint">Comment here</string>
    <string name="comment">Comment</string>
    <string name="no_comment">No Comment</string>
    <string name="comment_summary_prefix">See All</string>
    <string name="comment_summary_suffix">Comments</string>
    <string name="search_hint">Search…</string>
    <string name="related_images">Related Images</string>
    <string name="no_related_images">No Related Images</string>

</resources>
