...
            android:padding="24dp"
            android:alpha="0.5"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_access_time_black" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/description"
            android:layout_toRightOf="@+id/user_icon"
            android:layout_toEndOf="@+id/user_icon"
            android:gravity="center_vertical"
...
